--- a/src/WebClient/FilePickerModal.html
+++ b/src/WebClient/FilePickerModal.html
@@ -3,7 +3,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h4 class="modal-title">Choose a file</h4>
+				<h4 class="modal-title" data-bind="text: operationModeStr() === 'PickFile' ? 'Choose a file' : 'Choose a folder'"></h4>
 			</div>
 			<div class="modal-body">
 				<ol class="breadcrumb" data-bind="foreach: pathElems">
