--- a/src/WebClient/FilePickerModal.html
+++ b/src/WebClient/FilePickerModal.html
@@ -24,6 +24,13 @@
 					</tbody>
 				</table>
 				</div>
+				<div class="form-group">
+					<div class="checkbox">
+						<label>
+							<input type="checkbox" data-bind="checked: optShowHiddenFiles" />Show hidden files
+						</label>
+					</div>
+				</div>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-primary"
