some throbber when loading in the filepicker. not quite that good looking.. but will do for now

--- a/src/WebClient/FilePickerModal.html
+++ b/src/WebClient/FilePickerModal.html
@@ -24,6 +24,10 @@
 					</tbody>
 				</table>
 				</div>
+				<!-- ko if: showThrobber -->
+				<div style="background:rgba(0,0,0,0.2); margin-top:-370px; height: 370px; width: 100%;"></div>
+				<div style="text-align:center; margin-top: -210px; margin-bottom: 170px; height: 50px; line-height: 50px; width: 200px; margin-left: auto; margin-right: auto; background: aliceblue;">Please hold</div>
+				<!-- /ko -->
 				<div class="form-group">
 					<div class="checkbox">
 						<label>
