--- a/src/WebClient/FayConfig.html
+++ b/src/WebClient/FayConfig.html
@@ -46,20 +46,24 @@
 	<link href="/static/bootstrap-3.0.0/css/bootstrap.min.css" rel="stylesheet">
 	<script type="text/html" id="configEditTemplate">
 		<form role="form">
+			<div class="form-group">
+				<label for="sourceName">Enter source name:</label>
+				<input type="text" class="form-control" id="sourceName" data-bind="value: configAddEditVM.pluginBeingEdited().cfgSourceName" placeholder="Enter source name" value=""/>
+			</div>
 			<div class="form-group" data-bind="foreach: configAddEditVM.pluginBeingEdited().cfgPluginConfig">
 				<label data-bind="text: memberName, attr: {for: memberName}"></label>
 				<!-- ko if: jQuery.inArray(memberType, ["String", "Text", "ByteString"]) >= 0 -->
-					<input type="text" class="form-control" data-bind="value: $root.configAddEditVM.configurationBeingEdited()[memberName], attr: {id: memberName}" placeholder="Enter value" value=""/>
+					<input type="text" class="form-control" data-bind="value: $root.configAddEditVM.configurationBeingEdited().configuration[memberName], attr: {id: memberName}" placeholder="Enter value" value=""/>
 				<!-- /ko -->
 				<!-- ko if: jQuery.inArray(memberType, ["FilePath", "FolderPath"]) >= 0 -->
 				<div class="input-group">
-					<input type="text" class="form-control" data-bind="value: $root.configAddEditVM.configurationBeingEdited()[memberName], attr: {id: memberName}" placeholder="Enter value" value=""/>
+					<input type="text" class="form-control" data-bind="value: $root.configAddEditVM.configurationBeingEdited().configuration[memberName], attr: {id: memberName}" placeholder="Enter value" value=""/>
 					<span class="input-group-btn"><button class="btn btn-default" type="button"
 data-bind="click: function() { $root.configAddEditVM.showFilePickerCb($root.configAddEditVM.pluginBeingEdited(), $root.configAddEditVM.configurationBeingEdited, memberName) }">Browse...</button></span>
 				</div>
 				<!-- /ko -->
 				<!-- ko if: memberType === "Password" -->
-					<input class="form-control" data-bind="value: $root.configAddEditVM.configurationBeingEdited()[memberName], attr: {id: memberName, type: $root.configAddEditVM.passwordType}" placeholder="Enter value" value=""/>
+					<input class="form-control" data-bind="value: $root.configAddEditVM.configurationBeingEdited().configuration[memberName], attr: {id: memberName, type: $root.configAddEditVM.passwordType}" placeholder="Enter value" value=""/>
 				<!-- /ko -->
 			</div>
 			<!-- ko if: $root.configAddEditVM.pluginBeingEditedHasPasswords -->
